# backdrop

./: .gitignore  LICENSE  README.md  pyproject.toml
src/backdrop/: __init__.py  __main__.py  cli.py  daemon.py  logger.py  process.py  utils.py
tests/: test_daemon.py
